--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,16 +5,12 @@ on:
     branches:
       - main
 
-permissions: {}
 jobs:
   release:
-    permissions:
-      contents: write # to push chart release and create a release (helm/chart-releaser-action)
-
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
@@ -23,16 +19,10 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
           
-      - name: Install Helm
-        uses: azure/setup-helm@v1
-        with:
-          version: v3.5.2
-
-      - name: Add dependency chart repos
-        run: |
-          helm repo add bitnami https://charts.bitnami.com/bitnami
-          
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_TOKEN: "${{ secrets.REPO_TOKEN }}"
+          CR_SKIP_EXISTING: true
+        with:
+          charts_dir: charts
