--- a/.github/workflows/validate-pr.yaml
+++ b/.github/workflows/validate-pr.yaml
@@ -1,26 +1,51 @@
-name: Validate Pull Request
+name: Helm PR Workflow
 
 on:
   pull_request:
-    types:
-      - opened
-      - edited
-      - reopened
-      - synchronize
+  workflow_dispatch:
 
 jobs:
-  validate:
+
+  lint-test:
     runs-on: ubuntu-latest
+    name: Helm Chart Lint
+    env:
+      CT_CHART_DIRS: charts
+      CT_TARGET_BRANCH: $GITHUB_BASE_REF
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.0.1
+      - name: Set up Helm
+        uses: azure/setup-helm@v1
 
-      - name: Validate PR
-        run: scripts/validate-pr.sh
-        env:
-          PR_TITLE: ${{ github.event.pull_request.title }}
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+
+      - name: Set up chart-testing
+        uses: helm/chart-testing-action@v2.1.0
+
+      - name: Add Helm Repo dependencies
+        run: helm repo add bitnami https://charts.bitnami.com/bitnami
+
+      - name: Run chart-testing (list-changed)
+        id: list-changed
+        run: |
+          changed=$(ct list-changed --target-branch $GITHUB_BASE_REF)
+          if [[ -n "$changed" ]]; then
+            echo "::set-output name=changed::true"
+          fi
+
+      - name: Run chart-testing (lint)
+        run: ct lint --target-branch $GITHUB_BASE_REF
+
+      - name: Create kind Kubernetes cluster
+        uses: helm/kind-action@v1.2.0
+        if: steps.list-changed.outputs.changed == 'true'
+
+      - name: Run chart-testing (install)
+        run: ct install --target-branch $GITHUB_BASE_REF
+
