--- a/.github/workflows/validate-pr.yaml
+++ b/.github/workflows/validate-pr.yaml
@@ -13,6 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Validates the pull request
-        uses: Namchee/conventional-pr@latest
+        uses: Namchee/conventional-pr@v0.12.1
         with:
           access_token: "${{ secrets.REPO_TOKEN}}"
