--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -47,7 +47,7 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --config ct.yaml
+        run: ct lint --validate-maintainers=false --config ct.yaml
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
