--- a/charts/mongoshake-prometheus-exporter/values.yaml
+++ b/charts/mongoshake-prometheus-exporter/values.yaml
@@ -64,7 +64,7 @@ serviceMonitor:
   ## If true, a ServiceMonitor CRD is created for a prometheus operator
   ## https://github.com/coreos/prometheus-operator
   ##
-  enabled: true
+  enabled: false
   path: /metrics
   namespace: monitoring
   labels: {}
