--- a/charts/mongoshake-prometheus-exporter/values.yaml
+++ b/charts/mongoshake-prometheus-exporter/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: osgurisdosre/mongoshake-prometheus-exporter
+  repository: ghcr.io/osgurisdosre/mongoshake-prometheus-exporter
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
